# ansible-personal-playbooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
jetbrains-toolbox/: fedora.yml
k8s/: ubuntu.yaml  ubuntu.yml
k8s/calico/: all.yaml
k8s/kubeadm/: ubuntu.yml
k8s/single_node_cluster/: all.yaml
python/: fedora.yml
vscode/: fedora.yaml  fedora.yml
xrdp/: fedora.yml
zsh/: ubuntu.yaml
