[tool.poetry]
name = "ansible-personal-playbooks"
version = "0.1.0"
description = ""
authors = ["Robert Smieja"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ansible = "^3.0.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
